Adição de novo caso de uso 'deleteCar'
